# linkedin-mcp

./: .gitignore  Cargo.toml  README.md  smithery.yaml
.github/workflows/: release.yml
npm/: index.js  package.json
npm-darwin-arm64/: package.json
npm-darwin-x64/: package.json
npm-linux-arm64/: README.md  package.json
npm-linux-x64/: package.json
npm-win32-x64/: package.json
src/: auth.rs  linkedin.rs  main.rs  mcp.rs  models.rs  tools.rs  tools_network.rs  tools_profile.rs  tools_social.rs
tests/: tools.rs
