[package]
name = "linkedin-mcp"
version = "0.1.8"
edition = "2021"
description = "MCP server for LinkedIn — read profile, publish posts, explore network. Single binary, no runtime required."
license = "MIT"

[[bin]]
name = "linkedin-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
tiny_http = "0.12"
dirs = "5"
open = "5"
urlencoding = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
